--- a/FluentEditor/ThemePalette/ThemePaletteView.xaml
+++ b/FluentEditor/ThemePalette/ThemePaletteView.xaml
@@ -292,7 +292,7 @@
                                       Glyph="&#xE70D;" />
                         </ToggleButton>
                     </Grid>
-                    <Grid Margin="0,8,0,0">
+                    <Grid Margin="0,8,0,32">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="Auto" />
@@ -332,6 +332,71 @@
                                                   VerticalAlignment="Top"
                                                   ColorPalette="{x:Bind Path=ViewModel.DarkPrimary, Mode=OneWay}"
                                                   IsExpanded="{x:Bind Path=PrimaryExpanderButton.IsChecked.Value, Mode=OneWay}"
+                                                  Style="{StaticResource ColorPaletteEditorExtraAlphaStyle}" />
+                    </Grid>
+
+                    <Grid HorizontalAlignment="Stretch"
+                          VerticalAlignment="Top">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+                        <TextBlock x:Uid="ControlPaletteHyperlinkBlock"
+                                   Grid.Column="0"
+                                   HorizontalAlignment="Left"
+                                   VerticalAlignment="Top"
+                                   FontWeight="SemiBold"
+                                   LineHeight="20"
+                                   Style="{StaticResource BodyTextBlockStyle}" />
+                        <ToggleButton x:Name="HyperlinkExpanderButton"
+                                      Grid.Column="1"
+                                      HorizontalAlignment="Right"
+                                      VerticalAlignment="Top"
+                                      Style="{StaticResource ExpanderButtonStyle}">
+                            <FontIcon FontSize="14"
+                                      Glyph="&#xE70D;" />
+                        </ToggleButton>
+                    </Grid>
+                    <Grid Margin="0,8,0,0">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition />
+                            <ColumnDefinition />
+                        </Grid.ColumnDefinitions>
+                        <TextBlock x:Uid="ControlPaletteLightThemeBlock"
+                                   Grid.Row="0"
+                                   Grid.Column="0"
+                                   Margin="0,0,8,12"
+                                   HorizontalAlignment="Left"
+                                   VerticalAlignment="Top"
+                                   LineHeight="16"
+                                   Style="{StaticResource CaptionTextBlockStyle}" />
+                        <TextBlock x:Uid="ControlPaletteDarkThemeBlock"
+                                   Grid.Row="0"
+                                   Grid.Column="1"
+                                   Margin="8,0,0,12"
+                                   HorizontalAlignment="Left"
+                                   VerticalAlignment="Top"
+                                   LineHeight="16"
+                                   Style="{StaticResource CaptionTextBlockStyle}" />
+                        <color:ColorPaletteEditor Grid.Row="1"
+                                                  Grid.Column="0"
+                                                  Margin="0,0,6,0"
+                                                  HorizontalAlignment="Left"
+                                                  VerticalAlignment="Top"
+                                                  ColorPalette="{x:Bind Path=ViewModel.LightHyperlink, Mode=OneWay}"
+                                                  IsExpanded="{x:Bind Path=HyperlinkExpanderButton.IsChecked.Value, Mode=OneWay}"
+                                                  Style="{StaticResource ColorPaletteEditorExtraAlphaStyle}" />
+                        <color:ColorPaletteEditor Grid.Row="1"
+                                                  Grid.Column="1"
+                                                  Margin="6,0,0,0"
+                                                  HorizontalAlignment="Left"
+                                                  VerticalAlignment="Top"
+                                                  ColorPalette="{x:Bind Path=ViewModel.DarkHyperlink, Mode=OneWay}"
+                                                  IsExpanded="{x:Bind Path=HyperlinkExpanderButton.IsChecked.Value, Mode=OneWay}"
                                                   Style="{StaticResource ColorPaletteEditorExtraAlphaStyle}" />
                     </Grid>
                 </StackPanel>
