--- a/FluentEditor/ThemePalette/ThemePaletteView.xaml
+++ b/FluentEditor/ThemePalette/ThemePaletteView.xaml
@@ -40,17 +40,6 @@
                            VerticalAlignment="Stretch"
                            Elevation="8" />
 
-            <Border Grid.Column="0"
-                    HorizontalAlignment="Stretch"
-                    VerticalAlignment="Stretch"
-                    Background="{x:Bind Path=ViewModel.LightRegionBrush, Mode=OneWay}"
-                    CornerRadius="2 0 0 2" />
-            <Border Grid.Column="1"
-                    HorizontalAlignment="Stretch"
-                    VerticalAlignment="Stretch"
-                    Background="{x:Bind Path=ViewModel.DarkRegionBrush, Mode=OneWay}"
-                    CornerRadius="0 2 2 0" />
-
             <ScrollViewer Grid.Column="0"
                           Grid.ColumnSpan="2"
                           HorizontalAlignment="Stretch"
@@ -58,7 +47,8 @@
                           HorizontalScrollBarVisibility="Disabled"
                           HorizontalScrollMode="Disabled"
                           VerticalScrollBarVisibility="Auto"
-                          VerticalScrollMode="Auto">
+                          VerticalScrollMode="Auto"
+                          CornerRadius="2,2,2,2">
                 <Grid x:Name="TestContentContainer"
                       HorizontalAlignment="Stretch"
                       VerticalAlignment="Top">
@@ -189,24 +179,22 @@
                                    VerticalAlignment="Top"
                                    LineHeight="16"
                                    Style="{StaticResource CaptionTextBlockStyle}" />
-                        <color:ColorPaletteEntryEditor Grid.Row="1"
-                                                       Grid.Column="0"
-                                                       Margin="0,0,6,0"
-                                                       HorizontalAlignment="Left"
-                                                       VerticalAlignment="Top"
-                                                       AutomationProperties.Name="{x:Bind Path=ViewModel.LightRegion.Title, Mode=OneWay}"
-                                                       ColorPaletteEntry="{x:Bind Path=ViewModel.LightRegion, Mode=OneWay}"
-                                                       Style="{StaticResource LargeColorPaletteEntryEditorStyle}" />
-                        <color:ColorPaletteEntryEditor Grid.Row="1"
-                                                       Grid.Column="1"
-                                                       Margin="6,0,0,0"
-                                                       HorizontalAlignment="Left"
-                                                       VerticalAlignment="Top"
-                                                       AutomationProperties.Name="{x:Bind Path=ViewModel.DarkRegion.Title, Mode=OneWay}"
-                                                       ColorPaletteEntry="{x:Bind Path=ViewModel.DarkRegion, Mode=OneWay}"
-                                                       Style="{StaticResource LargeColorPaletteEntryEditorStyle}" />
+                        <color:ColorPaletteEditor Grid.Row="1"
+                                                  Grid.Column="0"
+                                                  Margin="0,0,6,0"
+                                                  HorizontalAlignment="Left"
+                                                  VerticalAlignment="Top"
+                                                  ColorPalette="{x:Bind Path=ViewModel.LightRegion, Mode=OneWay}"
+                                                  Style="{StaticResource ColorPaletteEditorExtraAlphaStyle}" />
+                        <color:ColorPaletteEditor Grid.Row="1"
+                                                  Grid.Column="1"
+                                                  Margin="6,0,0,0"
+                                                  HorizontalAlignment="Left"
+                                                  VerticalAlignment="Top"
+                                                  ColorPalette="{x:Bind Path=ViewModel.DarkRegion, Mode=OneWay}"
+                                                  Style="{StaticResource ColorPaletteEditorExtraAlphaStyle}" />
                     </Grid>
-                     <Grid HorizontalAlignment="Stretch"
+                    <Grid HorizontalAlignment="Stretch"
                           VerticalAlignment="Top">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*" />
@@ -260,7 +248,7 @@
                                                   VerticalAlignment="Top"
                                                   ColorPalette="{x:Bind Path=ViewModel.LightBase, Mode=OneWay}"
                                                   IsExpanded="{x:Bind Path=BaseExpanderButton.IsChecked.Value, Mode=OneWay}"
-                                                  Style="{StaticResource ColorPaletteEditorExtraAlphaStyle}"/>
+                                                  Style="{StaticResource ColorPaletteEditorExtraAlphaStyle}" />
                         <color:ColorPaletteEditor Grid.Row="1"
                                                   Grid.Column="1"
                                                   Margin="6,0,0,0"
@@ -268,7 +256,7 @@
                                                   VerticalAlignment="Top"
                                                   ColorPalette="{x:Bind Path=ViewModel.DarkBase, Mode=OneWay}"
                                                   IsExpanded="{x:Bind Path=BaseExpanderButton.IsChecked.Value, Mode=OneWay}"
-                                                  Style="{StaticResource ColorPaletteEditorExtraAlphaStyle}"/>
+                                                  Style="{StaticResource ColorPaletteEditorExtraAlphaStyle}" />
                     </Grid>
                     <Grid HorizontalAlignment="Stretch"
                           VerticalAlignment="Top">
@@ -324,7 +312,7 @@
                                                   VerticalAlignment="Top"
                                                   ColorPalette="{x:Bind Path=ViewModel.LightPrimary, Mode=OneWay}"
                                                   IsExpanded="{x:Bind Path=PrimaryExpanderButton.IsChecked.Value, Mode=OneWay}"
-                                                  Style="{StaticResource ColorPaletteEditorExtraAlphaStyle}"/>
+                                                  Style="{StaticResource ColorPaletteEditorExtraAlphaStyle}" />
                         <color:ColorPaletteEditor Grid.Row="1"
                                                   Grid.Column="1"
                                                   Margin="6,0,0,0"
